@@ -1,3 +1,15 @@
+2008-09-23 Jens Tkotz <jens@peino.de> 1.5.10-svn-b2
+
+ * Enancement: Added more cancel/done button in the user management.
+
+ * Fix: use of gTranslate() instead of _() at some places.
+
+ * Fix: Added 'g-button' classes for some button for consistency.
+
+ * Change: translation domain for platform functions.
+
+ Thanks to Niels Baggesen
+
 2008-09-18 Jens Tkotz <jens@peino.de> 1.5.10-svn-b1
 
  * Fix: Attempt to delete a subalbum via album commandbox failed.
